package ru.omsu.fctk.Entities.enums;

public enum Role {
    ADMIN,
    MODERATOR,
    USER,
    GUEST
}
