package ru.omsu.fctk.Entities.enums;

public enum State {
    ACTIVE,
    READ_ONLY,
    EXPIRED,
    ARCHIVED
}
